Support com.gradleup.shadow plugin (#267)
Makes the [new shadow plugin ID](https://github.com/GradleUp/shadow/releases/tag/8.3.0) the default, reference `com.github.johnrengelman.shadow` as the "old" one, remove `io.github.goooler.shadow`. Includes renames of related functional tests.

---------

Co-authored-by: Zongle Wang <wangzongler@gmail.com>